--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
-<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>CSS Graffiti Override</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
   <link rel="stylesheet" href="css/cleanup.css">
-  <link rel="stylesheet" href="css/paint.css">
+  
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
 </head>
 <body>
   <div id="wall">
-    <div class="tag-1"></div>
-    <div id="tag-2"></div>
-    <div id="tag-3" class="slick wicked"></div>
+    <div class="tag tag-1"></div>
+    <div class="tag tag-2"></div>
+    <div class="tag tag-3 slick wicked"></div>
+    
     <div class="parent">
-      <div id="tag-4"></div>
+      <div class="tag tag-4"></div>
     </div>
+
     <div class="parent">
-      <div id="tag-5" class="slick"></div>
+      <div class="tag tag-5 slick"></div>
     </div>
+
     <div class="parent">
-      <div></div>
-      <div>
-        <div id="tag-6"></div>
+      <div class="tag">
+        <div id="tag-6" class="tag"></div>
       </div>
     </div>
+
     <div class="parent">
-      <div>
-        <div id="tag-7" class="slick"></div>
+      <div class="tag">
+        <div id="tag-7" class="tag slick"></div>
       </div>
-      <div></div>
+      <div class="tag"></div>
     </div>
   </div>
 </body>
